--- a/OSX/Dynamical/PlotWindow.xib
+++ b/OSX/Dynamical/PlotWindow.xib
@@ -29,7 +29,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="578" height="578"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     </openGLView>
-                    <slider verticalHuggingPriority="750" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="miU-MG-GZg">
+                    <slider verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="miU-MG-GZg">
                         <rect key="frame" x="584" y="539" width="206" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <sliderCell key="cell" continuous="YES" state="on" alignment="left" minValue="-25" maxValue="25" doubleValue="10" tickMarkPosition="above" sliderType="linear" id="hUO-2M-CGM"/>
@@ -37,7 +37,7 @@
                             <action selector="changeParameter:" target="-2" id="LfZ-GY-qh1"/>
                         </connections>
                     </slider>
-                    <slider verticalHuggingPriority="750" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wWf-pw-I7q">
+                    <slider verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="wWf-pw-I7q">
                         <rect key="frame" x="584" y="514" width="206" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <sliderCell key="cell" continuous="YES" state="on" alignment="left" minValue="-50" maxValue="50" doubleValue="28" tickMarkPosition="above" sliderType="linear" id="d33-U5-0ti"/>
@@ -45,7 +45,7 @@
                             <action selector="changeParameter:" target="-2" id="zhJ-So-MsL"/>
                         </connections>
                     </slider>
-                    <slider verticalHuggingPriority="750" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="E5x-Mz-pko">
+                    <slider verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="E5x-Mz-pko">
                         <rect key="frame" x="584" y="489" width="206" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <sliderCell key="cell" continuous="YES" state="on" alignment="left" minValue="-5" maxValue="5" doubleValue="2.6665999999999999" tickMarkPosition="above" sliderType="linear" id="3Xp-db-uOr"/>
@@ -53,25 +53,52 @@
                             <action selector="changeParameter:" target="-2" id="ZGF-j6-Q9c"/>
                         </connections>
                     </slider>
-                    <slider horizontalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FZI-HL-5cP">
+                    <slider horizontalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="FZI-HL-5cP">
                         <rect key="frame" x="677" y="17" width="21" height="283"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <sliderCell key="cell" continuous="YES" alignment="left" minValue="0.10000000000000001" maxValue="5" doubleValue="1" tickMarkPosition="right" sliderType="linear" id="7FB-BX-KSM"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="278" id="1PA-Pi-AyX"/>
+                        </constraints>
+                        <sliderCell key="cell" continuous="YES" alignment="left" minValue="0.10000000000000001" maxValue="5" doubleValue="1" tickMarkPosition="left" sliderType="linear" id="7FB-BX-KSM"/>
                         <connections>
                             <action selector="changeZoom:" target="-2" id="a2g-D2-Xoh"/>
                         </connections>
                     </slider>
+                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="E1K-gb-DrN">
+                        <rect key="frame" x="602" y="396" width="100" height="32"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <buttonCell key="cell" type="push" title="Add Seed" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="pQ9-EJ-Dby">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                        <connections>
+                            <action selector="addSeed:" target="-2" id="Wb6-s2-OgP"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="E1K-gb-DrN" firstAttribute="trailing" secondItem="FZI-HL-5cP" secondAttribute="trailing" id="5AU-x2-qSM"/>
                     <constraint firstAttribute="bottom" secondItem="cTM-vO-yAG" secondAttribute="bottom" id="854-fG-1oJ"/>
+                    <constraint firstItem="E1K-gb-DrN" firstAttribute="top" secondItem="E5x-Mz-pko" secondAttribute="bottom" constant="67" id="DaN-bW-chr"/>
                     <constraint firstItem="E5x-Mz-pko" firstAttribute="leading" secondItem="cTM-vO-yAG" secondAttribute="trailing" constant="8" symbolic="YES" id="E04-LX-a17"/>
                     <constraint firstItem="cTM-vO-yAG" firstAttribute="leading" secondItem="2" secondAttribute="leading" id="M0e-11-k0f"/>
                     <constraint firstItem="miU-MG-GZg" firstAttribute="leading" secondItem="cTM-vO-yAG" secondAttribute="trailing" constant="8" symbolic="YES" id="P0w-Ba-IKC"/>
+                    <constraint firstItem="E5x-Mz-pko" firstAttribute="centerX" secondItem="FZI-HL-5cP" secondAttribute="centerX" id="Phe-17-Yfa"/>
+                    <constraint firstItem="E5x-Mz-pko" firstAttribute="trailing" secondItem="wWf-pw-I7q" secondAttribute="trailing" id="Swf-w5-gzc"/>
+                    <constraint firstAttribute="trailing" secondItem="miU-MG-GZg" secondAttribute="trailing" constant="20" symbolic="YES" id="WQ3-Ln-mec"/>
+                    <constraint firstItem="wWf-pw-I7q" firstAttribute="top" secondItem="miU-MG-GZg" secondAttribute="bottom" constant="8" symbolic="YES" id="X87-N4-7xV"/>
+                    <constraint firstItem="miU-MG-GZg" firstAttribute="top" secondItem="2" secondAttribute="top" constant="20" symbolic="YES" id="Xl7-gx-FaV"/>
                     <constraint firstItem="cTM-vO-yAG" firstAttribute="top" secondItem="2" secondAttribute="top" id="Y7U-NH-su8"/>
                     <constraint firstAttribute="trailing" secondItem="cTM-vO-yAG" secondAttribute="trailing" constant="230" id="moe-0P-7uI"/>
+                    <constraint firstItem="E5x-Mz-pko" firstAttribute="top" secondItem="wWf-pw-I7q" secondAttribute="bottom" constant="8" symbolic="YES" id="nCe-0J-mdy"/>
+                    <constraint firstItem="wWf-pw-I7q" firstAttribute="trailing" secondItem="miU-MG-GZg" secondAttribute="trailing" id="uBc-Xv-OFZ"/>
+                    <constraint firstAttribute="bottom" secondItem="FZI-HL-5cP" secondAttribute="bottom" constant="20" symbolic="YES" id="x41-xp-jGR"/>
                     <constraint firstItem="wWf-pw-I7q" firstAttribute="leading" secondItem="cTM-vO-yAG" secondAttribute="trailing" constant="8" symbolic="YES" id="ylT-Qw-p0p"/>
                 </constraints>
             </view>
+            <connections>
+                <outlet property="delegate" destination="-2" id="1Fq-Dk-OcJ"/>
+            </connections>
         </window>
     </objects>
 </document>
